# TrackBall

./: .gitignore
EBV Projekt/: EBVProjekt.sln
EBV Projekt/EBVProjekt/: EBVProjekt.vcxproj  EBVProjekt.vcxproj.filters  cameraCalibration.cc  cameraCalibration.h  gui.h  hcgui.cc  houghCircle.cc  houghCircle.h  houghCircle_old.cc  main.cc  particleFilter.cc  particleFilter.h  sobel.cc  sobel.h  trackGui.cc
Lösungsvorschlag 5 nosh/: CMakeLists.txt  sobel.cu  sobel.cuh
Tutorium01/: Makefile  peas.cc  peas.sample.cc
ebvassignment01/: cutlery.sample.cc
ebvassignment01/Abgabe/ebvassignment01-A.Ofenloch-F.Ihle-S.Schirrmacher-N.Cheema/: cutlery.cc
ebvassignment01/EBV Assignment 1/: Aufgabe 3.txt  EBV Assignment 1.sln  ezb.cls  ezb.tex
ebvassignment01/EBV Assignment 1/Debug/: EBV Assignment 1.ilk
ebvassignment01/EBV Assignment 1/EBV Assignment 1/: EBV Assignment 1.vcxproj  EBV Assignment 1.vcxproj.filters  Main.cpp  Region.cpp  RegionSet.cpp  RegionSet.hpp
ebvassignment01/EBV Assignment 1/EBV Assignment 1/Debug/: vc120.idb
ebvassignment01/EBV Assignment 1/EBV Assignment 1/Debug/EBV Assignment 1.tlog/: CL.read.1.tlog  CL.write.1.tlog  EBV Assignment 1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ebvassignment01/EBV Assignment 1/EBV Assignment 1/include/: Interval.hpp  Precompiled.hpp  Region.hpp
ebvassignment01/Notizen_zu_den_Aufg/: Aufgabe2_Kekse.txt  Aufgabe3_Klassifizierung.txt
ebvassignment01/ueb01_nosh/cutlery/cutlery/: cutlery.vcxproj  cutlery.vcxproj.filters  cutlery_nosh.cc  cutlery_simon.cc
ebvassignment01/ueb01_simon/: CMakeLists.txt  cutlery.cc
ebvassignment01/ueb01_simon/cutlery/: cutlery.sln
ebvassignment02/latex_document/: ezb.tex
ebvassignment02/ueb02_nosh/: sobel.sln
ebvassignment02/ueb02_nosh/sobel/: gui.cc  main.cc  sobel.cc  sobel.h  sobel.vcxproj  sobel.vcxproj.filters  sobelgui.cc  sobelgui.h
ebvassignment03/latex_document/: ezb.tex
ebvassignment04/: CMakeLists.txt  geometry.cc  geometry.h  gui.cc  gui.h  hcgui.cc  hcgui.h  houghCircle.h  main.cc  particleFilter.h  particleFilter.sample-cc  sobel.h  sobelgui.cc  trackGui.cc  trackGui.h
ebvassignment04/Abgabe/: cameraCalibration.cc
ebvassignment04/latex_document/: Strahlensatz.eps  ar.ai  ar.eps  ezb.tex
ebvassignment05/: CMakeCache.txt  central.h  main.cu  sobel.cu  sobel.cu-sample
ebvassignment05/cuda_sobel_simon/: sobel.cu
ebvassignment05/latex_document/: ezb.tex
latex_document/: ezb.cls
